# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kwrapi"
version = "0.0.1"
description = "Kubernetes API wrapper"
readme = "README.md"
dependencies = [
    "requests >= 2.28.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black"]

[project.urls]
Homepage = "https://github.com/omnimodular/kwrapi"
